Strip back index.ejs, db.ejs; delete nave partial; strip back header partial; strip back stylesheet

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,3 @@
-<title>Sqeez.it</title>
+<title>sqeez.it</title>
 <meta name="description" content="A simple URL shortener" />
 <link rel="stylesheet" type="text/css" href="/stylesheets/main.css" />
