Added post action to talk to DB

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,10 @@
 </head>
 
 <body>
+  <form action="/sqeez" method="post">
+    <input type="text" name="url" /><br>
+    <input type="submit" value="Submit" />
+  </form>
 
 </body>
 </html>
